--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -33,7 +33,7 @@
     <p>Descripcion: {{product.descripcion}}</p>
     <p>Categoria:{{product.category}}</p>
     <p>Precio: {{product.precio}}</p>
-    <p>Disponibilidad: {{product.availability}}</p>
+    <p>Stock: {{product.stock}}</p>
     <h5>CANTIDAD A COMPRAR: {{quantity}}</h5>
     <hr>
     {{/each}}
